[package]
name = "encrypt_secret"
version = "0.1.37"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Library to encrypt/decrypt secrets"
repository = "https://github.com/bestia-dev/encrypt_secret"
readme = "README.md"
license = "MIT"
keywords = ["rust"]
categories = ["config"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
secrecy = { version="0.8.0", features=["alloc"]}
argon2 = "0.5.3"
ssh-key = { version = "0.6.4", features = [ "rsa", "encryption"] }
ssh-agent-client-rs = "0.9.0"
rsa = { version = "0.9.6", features = ["sha2","pem"] }
zeroize = "1.7.0"
aes-gcm = "0.10.3"
camino = "1.1.6"
base64ct = {version = "1.6.0", features = ["alloc"] }