[package]
name = "cargo_auto_encrypt_secret_lib"
version = "1.0.5"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Library to encrypt/decrypt secrets"
repository = "https://github.com/automation-tasks-rs/cargo_auto_encrypt_secret_lib"
readme = "README.md"
license = "MIT"
keywords = ["rust","work-in-progress"]
categories = ["config"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
argon2 = "0.5.3"
ssh-key = { version = "0.6.6", features = [ "rsa", "encryption"] }
ssh-agent-client-rs = "0.9.1"
rsa = { version = "0.9.6", features = ["sha2","pem"] }
zeroize = "1.7.0"
aes-gcm = "0.10.3"
camino = "1.1.6"
base64ct = {version = "1.6.0", features = ["alloc"] }
home = "0.5.9"
inquire = "0.7.0"
serde_json = {version= "1.0.114", features=["std"]}
tracing = "0.1.40"
