[package]
name = "cargo_auto_encrypt_secret_lib"
# SemVer rules for libraries:
# increment MAJOR version when you make breaking changes (incompatible API changes)
# increment MINOR version when you add functionality (that are backward compatible)
# increment PATCH version when you make bug fixes (that are backward compatible)
# PATCH version MUST be reset to 0 when MINOR version is incremented.
# PATCH and MINOR versions MUST be reset to 0 when MAJOR version is incremented.
version = "1.1.8"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "OBSOLETE: Library to encrypt/decrypt secrets"
repository = "https://github.com/automation-tasks-rs/cargo_auto_encrypt_secret_lib"
readme = "README.md"
license = "MIT"
keywords = ["rust","maintained","ready_for_use"]
categories = ["config"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependecies in Cargo.toml look like a specific version of the crate, they are just like a carret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
argon2 = "0.5.3"
ssh-key = { version = "0.6.6", features = [ "rsa", "encryption"] }
ssh-agent-client-rs = "0.9.1"
rsa = { version = "0.9.6", features = ["sha2","pem"] }
zeroize = "1.7.0"
aes-gcm = "0.10.3"
camino = "1.1.6"
base64ct = {version = "1.6.0", features = ["alloc"] }
home = "0.5.9"
inquire = "0.7.0"
serde_json = {version= "1.0.114", features=["std"]}
tracing = "0.1.40"
